主诉修改为textarea

--- a/widget/html/history/history.html
+++ b/widget/html/history/history.html
@@ -104,10 +104,10 @@
                         <input type="text" id="consultation_department" />
                     </div>
                 </div>
-                <div class="field">
-                    <div class="key">主诉</div>
-                    <div class="value">
-                        <input type="text" id="chief_complaint" />
+                <div class="field textarea_field">
+                    <div class="textarea_key">主诉</div>
+                    <div class="textarea_value">
+                        <textarea id="chief_complaint" placeholder="请输入主诉信息"></textarea>
                     </div>
                 </div>
                 <div class="field textarea_field">
@@ -125,8 +125,8 @@
             </div>
             <div id="remark" class="remark">
                 <span>说明：</span><br>
-                <span>新增成功后，可在查看界面新增体检信息和辅助检查信息</span><br>
-                <span>修改体检信息和辅助检查信息请从查看页面进入</span>
+                <span>1. 新增成功后，可在查看界面新增体检和辅助检查信息</span><br>
+                <span>2. 修改体检和辅助检查信息请从查看页面进入</span>
             </div>
         </div>
     </div>
