--- a/widget/html/history/viewFullHistoryFrame.html
+++ b/widget/html/history/viewFullHistoryFrame.html
@@ -119,10 +119,10 @@
                         <input type="text" id="consultation_department" />
                     </div>
                 </div>
-                <div class="field">
-                    <div class="key">主诉</div>
-                    <div class="value">
-                        <input type="text" id="chief_complaint" />
+                <div class="field textarea_field">
+                    <div class="textarea_key">主诉</div>
+                    <div class="textarea_value">
+                        <textarea id="chief_complaint"></textarea>
                     </div>
                 </div>
                 <div class="field textarea_field">
