--- a/widget/html/followup/followup.html
+++ b/widget/html/followup/followup.html
@@ -43,8 +43,8 @@
             </div>
             <div id="remark" class="remark">
                 <span>说明：</span><br>
-                <span>新增成功后，可在查看界面新增体检信息和辅助检查信息</span><br>
-                <span>修改体检信息和辅助检查信息请从查看页面进入</span>
+                <span>1. 新增成功后，可在查看界面新增体检和辅助检查信息</span><br>
+                <span>2. 修改体检和辅助检查信息请从查看页面进入</span>
             </div>
         </div>
     </div>
