--- a/widget/login.html
+++ b/widget/login.html
@@ -37,7 +37,7 @@
                 </label>
                 <input type="button" value="登录" onclick="login();">
             </form>
-            <h5><a href="#" tapmode="" onclick="openRegister();">注册</a></h5>
+            <h5><a href="#" tapmode="" style="font-size: 15px" onclick="openRegister();">注册</a></h5>
         </section>
         <div style="text-align:center;clear:both">
         </div>
