--- a/widget/signup.html
+++ b/widget/signup.html
@@ -40,7 +40,7 @@
                 </label>
                 <input type="button" value="注册" onclick="register();">
             </form>
-            <h5><a href="#" tapmode="" onclick="window.closeWin();">返回登录</a></h5>
+            <h5><a href="#" tapmode="" style="font-size: 15px" onclick="window.closeWin();">返回登录</a></h5>
         </section>
         <div style="text-align:center;clear:both">
         </div>
@@ -51,7 +51,7 @@
 <script type="text/javascript">
 var apiready = function() {
     window.closeWin = function(winName) {
-        confirmChosen();
+        api.closeWin();
     }
 }
 
@@ -66,7 +66,7 @@ function register() {
         });
         return;
     }
-    if (passWord != passWordSed) {
+    if (passWord != passWordSec) {
         api.alert({
             msg: "两次输入密码不一致"
         }, function(ret, err) {
@@ -91,6 +91,7 @@ function register() {
             }
         } else {
             alert("用户注册成功！");
+            api.closeWin();
         }
     });
 }
