--- a/widget/html/history/dupHistoryList.html
+++ b/widget/html/history/dupHistoryList.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../../script/api.js"></script>
     <script type="text/javascript" src="../../script/constants.js"></script>
     <script type="text/javascript" src="../../script/util.js"></script>
+    <script type="text/javascript" src="../../script/APICloud-rest-SHA1.js"></script>
 </head>
 
 <body class="body-silver">
@@ -19,7 +20,7 @@
                     &lt; 返回
                 </a>
             <div id="middle">
-                <span id="title">重名病历</span>
+                <span id="title"></span>
             </div>
             <a id="right" tapmode="" onclick="" class="button button-raised button-silver">
             </a>
@@ -35,7 +36,21 @@
  */
 var apiready = function() {
     userName = $api.getStorage("userName");
+
+    _func = "";
+
     dupName = api.pageParam.name;
+    searchCondition = api.pageParam.condition;
+
+    if (!!dupName) {
+        $api.byId('title').innerHTML = "重名病历";
+        _func = "dup";
+    }
+
+    if (!!searchCondition) {
+        $api.byId('title').innerHTML = "查找结果";
+        _func = "search"
+    }
 
     window.closeWin = function(winName) {
         api.closeWin();
@@ -116,56 +131,117 @@ function loadList() {
         appKey: historyConstants.appKey,
         host: historyConstants.host
     });
-    query.createQuery(function(ret, err) {
-        if (ret && ret.qid) {
-            var queryId = ret.qid;
-            query.desc({
-                qid: queryId,
-                column: "updatedAt"
-            });
-            if (userName != "admin") {
+    if (_func == "dup") {
+        query.createQuery(function(ret, err) {
+            if (ret && ret.qid) {
+                var queryId = ret.qid;
+                query.desc({
+                    qid: queryId,
+                    column: "updatedAt"
+                });
+                if (userName != "admin") {
+                    query.whereEqual({
+                        qid: queryId,
+                        column: 'record_doctor',
+                        value: userName
+                    });
+                }
                 query.whereEqual({
                     qid: queryId,
-                    column: 'record_doctor',
-                    value: userName
+                    column: "name",
+                    value: dupName
+                })
+                var json_objs = [];
+                model.findAll({
+                    class: historyConstants.table.history,
+                    qid: queryId
+                }, function(ret, err) {
+                    hideProgress();
+                    if (err) {
+                        alert(JSON.stringify(err));
+                    } else {
+                        if (ret) {
+                            var idx = 0;
+                            while (ret[idx] != undefined) {
+                                var historyItem = {
+                                    history_id: ret[idx].id,
+                                    record_doctor: ret[idx].record_doctor,
+                                    title: ret[idx].name + "   " + ret[idx].diagnosis,
+                                    subTitle: ret[idx].gender + " - " + getAge(ret[idx].birthday) + "岁 - " + ret[idx].consultation_department + " - " + ret[idx].createdAt.substring(0, 10),
+                                    remark: (ret[idx].admission_number != "") ? (ret[idx].admission_number + "(住)") : (ret[idx].outpatient_number)
+                                };
+                                if (userName == "admin") {
+                                    historyItem.subTitle = "记录: " + ret[idx].record_doctor + " - " + historyItem.subTitle;
+                                }
+                                json_objs.push(historyItem);
+                                idx = idx + 1;
+                            }
+                            loadData(json_objs);
+                        }
+                    }
                 });
             }
-            query.whereEqual({
-                qid: queryId,
-                column: "name",
-                value: dupName
-            })
-            var json_objs = [];
-            model.findAll({
-                class: historyConstants.table.history,
-                qid: queryId
-            }, function(ret, err) {
-                hideProgress();
-                if (err) {
-                    alert(JSON.stringify(err));
-                } else {
-                    if (ret) {
-                        var idx = 0;
-                        while (ret[idx] != undefined) {
-                            var historyItem = {
-                                history_id: ret[idx].id,
-                                record_doctor: ret[idx].record_doctor,
-                                title: ret[idx].name + "   " + ret[idx].diagnosis,
-                                subTitle: ret[idx].gender + " - " + getAge(ret[idx].birthday) + "岁 - " + ret[idx].consultation_department + " - " + ret[idx].createdAt.substring(0, 10),
-                                remark: (ret[idx].admission_number != "") ? (ret[idx].admission_number + "(住)") : (ret[idx].outpatient_number)
-                            };
-                            if (userName == "admin") {
-                                historyItem.subTitle = "记录: " + ret[idx].record_doctor + " - " + historyItem.subTitle;
-                            }
-                            json_objs.push(historyItem);
-                            idx = idx + 1;
-                        }
-                        loadData(json_objs);
-                    }
+        });
+    } else if (_func == "search") {
+        var client = new Resource(historyConstants.appId, historyConstants.appKey);
+        var Model = client.Factory(historyConstants.table.history);
+        var json_objs = [];
+        Model.query({
+            filter: {
+                "where": {
+                    "or": [{
+                        "record_doctor": {"like": searchCondition}
+                    }, {
+                        "consultation_department": {"like": searchCondition}
+                    }, {
+                        "chief_complaint": {"like": searchCondition}
+                    }, {
+                        "diagnosis": {"like": searchCondition}
+                    }, {
+                        "treatment": {"like": searchCondition}
+                    }, {
+                        "name": {"like": searchCondition}
+                    }, {
+                        "gender": {"like": searchCondition}
+                    }, {
+                        "admission_number": {"like": searchCondition}
+                    }, {
+                        "outpatient_number": {"like": searchCondition}
+                    }, {
+                        "phone": {"like": searchCondition}
+                    }, {
+                        "address": {"like": searchCondition}
+                    }, {
+                        "job": {"like": searchCondition}
+                    }]
                 }
-            });
-        }
-    });
+            }
+        }, function(ret, err) {
+            hideProgress();
+            if (err) {
+                alert(JSON.stringify(err));
+            } else {
+                if (ret) {
+                    var idx = 0;
+                    while (ret[idx] != undefined) {
+                        var historyItem = {
+                            history_id: ret[idx].id,
+                            record_doctor: ret[idx].record_doctor,
+                            title: ret[idx].name + "   " + ret[idx].diagnosis,
+                            subTitle: ret[idx].gender + " - " + getAge(ret[idx].birthday) + "岁 - " + ret[idx].consultation_department + " - " + ret[idx].createdAt.substring(0, 10),
+                            remark: (ret[idx].admission_number != "") ? (ret[idx].admission_number + "(住)") : (ret[idx].outpatient_number)
+                        };
+                        if (userName == "admin") {
+                            historyItem.subTitle = "记录: " + ret[idx].record_doctor + " - " + historyItem.subTitle;
+                        }
+                        json_objs.push(historyItem);
+                        idx = idx + 1;
+                    }
+                    loadData(json_objs);
+                }
+            }
+        });
+    }
 }
 
 /**
