解决ios黑色状态栏问题，使用沉浸式状态栏

--- a/widget/html/accessoryexam/accessoryExam.html
+++ b/widget/html/accessoryexam/accessoryExam.html
@@ -258,6 +258,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     api.openFrame({
         name: "accessory_exam",
         url: './accessoryExamFrame.html',
@@ -270,7 +271,7 @@ apiready = function() {
             duration: 0
         }
     });
-    
+
     // 绑定android后退键事件
     api.addEventListener({
         name: 'keyback'
