--- a/widget/html/followup/followupFrame.html
+++ b/widget/html/followup/followupFrame.html
@@ -56,6 +56,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     window.closeWin = function(winName) {
         confirmChosen();
     }
