--- a/widget/html/followup/followupList.html
+++ b/widget/html/followup/followupList.html
@@ -35,6 +35,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     window.closeWin = function(winName) {
         api.closeWin();
     }
