--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -61,6 +61,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     window.closeWin = function(winName) {
         rmStorage("followup");
         api.closeWin();
