--- a/widget/html/history/dupHistoryList.html
+++ b/widget/html/history/dupHistoryList.html
@@ -35,6 +35,7 @@
  * @return {[type]} [description]
  */
 var apiready = function() {
+    _fixIos7Bar();
     userName = $api.getStorage("userName");
 
     _func = "";
