--- a/widget/html/history/historyList.html
+++ b/widget/html/history/historyList.html
@@ -51,6 +51,7 @@
  */
 var apiready = function() {
     // openDB("history");
+    _fixIos7Bar();
     userName = $api.getStorage("userName");
 
     // 接收刷新列表event
