--- a/widget/html/history/viewFullHistory.html
+++ b/widget/html/history/viewFullHistory.html
@@ -145,6 +145,7 @@
 </body>
 <script type="text/javascript">
 apiready = function() {
+    _fixIos7Bar();
     api.openFrame({
         name: "history",
         url: './viewFullHistoryFrame.html',
