--- a/widget/html/physical/physical.html
+++ b/widget/html/physical/physical.html
@@ -127,6 +127,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     api.openFrame({
         name: "physical",
         url: './physicalFrame.html',
