--- a/widget/html/accessoryexam/viewAccessoryExam.html
+++ b/widget/html/accessoryexam/viewAccessoryExam.html
@@ -258,6 +258,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     api.openFrame({
         name: "accessory_exam",
         url: './viewAccessoryExamFrame.html',
