--- a/widget/html/history/history.html
+++ b/widget/html/history/history.html
@@ -137,6 +137,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     api.openFrame({
         name: "history",
         url: './historyFrame.html',
