--- a/widget/html/history/historyFrame.html
+++ b/widget/html/history/historyFrame.html
@@ -139,6 +139,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     window.closeWin = function(winName) {
         confirmChosen();
     }
