--- a/widget/html/history/viewFullHistoryFrame.html
+++ b/widget/html/history/viewFullHistoryFrame.html
@@ -158,6 +158,7 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    _fixIos7Bar();
     window.closeWin = function(winName) {
         rmStorage("history");
         api.closeWin();
