--- a/widget/signup.html
+++ b/widget/signup.html
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-        <section class="login-form-wrap">
+        <section class="login-form-wrap signup-form-wrap">
             <h1>眼科病历本</h1>
             <form class="login-form">
                 <label>
